# factlog-academic

./: .gitignore  .mailmap  LICENSE  NOTICE  README.en.md  README.ko.md  README.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml
docs/: README.en.md  README.md  academic-import.en.md  arxiv.en.md  arxiv.md  eject.md  getting-started-verify.md  openalex.en.md  openalex.md  pubmed-spike-findings.md  pubmed.en.md  pubmed.md  spike-fallback-precision.cache.json  spike-fallback-precision.md  typed-relations.md  zotero-import.en.md  zotero-import.md
docs/guide/: determinism.en.md  determinism.md  install.en.md  install.md
docs/reference/: relation-aliases.en.md  relation-aliases.md  review.en.md  review.md  single-valued.en.md  single-valued.md  slash-commands.en.md  slash-commands.md  typed-relations.en.md  typed-relations.md  value-audit.en.md  value-audit.md  value-hierarchy.en.md  value-hierarchy.md
examples/sample-kb/: README.md
examples/sample-kb/decisions/: open-questions.md
examples/sample-kb/facts/: candidates.csv  logic_report.txt  query.dl
examples/sample-kb/pages/: claude-code.md  factlog.md
examples/sample-kb/policy/: logic-policy.dl  logic-policy.md  questions.md
examples/sample-kb/runs/: 2026-01-01T00-00-00-sample.json
examples/sample-kb/sources/: example.md
factlog/: __init__.py  __main__.py  bibtex.py  cli.py  common.py  compile_facts.py  csl.py  export_types.py  front_matter_scan.py  ingest.py  literal_types.py  review_sections.py  text_norm.py
factlog/integrations/: __init__.py
factlog/integrations/arxiv/: __init__.py  backfill.py  check_log.py  check_versions.py  client.py  config.py  id_normalizer.py  importer.py  source_writer.py  work_parser.py
factlog/integrations/common/: __init__.py  _textio.py  acknowledge.py  backfill.py  check_log.py  doi.py  front_matter.py  matcher.py  merge_candidates.py  porcelain.py  provenance.py  source_writer.py  vocabulary.py
factlog/integrations/openalex/: __init__.py  abstract_util.py  api_client.py  backfill.py  check_log.py  config.py  importer.py  refresh.py  source_writer.py  work_parser.py
factlog/integrations/pubmed/: __init__.py  backfill.py  check_log.py  client.py  config.py  importer.py  refresh.py  retraction.py  search.py  source_writer.py  work_parser.py
factlog/integrations/zotero/: __init__.py  _textio.py  annotation_writer.py  api_client.py  config.py  importer.py  item_parser.py  pdf_importer.py  source_writer.py
hooks/: gate_check.sh  hooks.json
skills/factlog/: SKILL.md
skills/factlog/references/: README.md  self-correct.md  text-to-datalog.md  text-to-fact.md
tests/: README.md  setup.sh  test_accept_durable.sh  test_active_kb_config.sh  test_amend.sh  test_ask_router.sh  test_check_empty_policy.sh  test_count_check.sh  test_coverage.sh  test_eject_cmd.sh  test_eject_path_scope.sh  test_entity_audit.sh  test_export_nested.sh  test_finalize.sh  test_finalize_conflict_atomicity.sh  test_gate_check.sh  test_hwp_ingest.sh  test_ingest_converter_warnings.sh  test_init_active_kb.sh  test_init_respects_root.sh  test_logic_check_statuses.sh  test_merge_no_data_loss.sh  test_output_lang.sh  test_page_template.sh  test_path_report.sh  test_policy_escape_report.sh  test_relation_aliases_scaffold.sh  test_scan_text_containers.sh  test_single_valued_scaffold.sh  test_sources_cmd.sh  test_status_cmd.sh  test_status_conflict_parity.sh  test_sync_ignore.sh  test_typed_parse_report.sh  test_xml_markup_containers.sh  test_zotero_import.sh
tests/unit/: conftest.py  test_active_kb_adoption.py  test_arxiv_acknowledge_withdrawal.py  test_arxiv_backfill_provenance.py  test_arxiv_check_log.py  test_arxiv_check_versions.py  test_arxiv_check_versions_conflict.py  test_arxiv_check_versions_no_version.py  test_arxiv_cli.py  test_arxiv_client.py  test_arxiv_config.py  test_arxiv_id_normalizer.py  test_arxiv_importer.py  test_arxiv_merge.py  test_arxiv_provenance_on_import.py  test_arxiv_source_writer.py  test_arxiv_work_parser.py  test_atomic_accepted_write.py  test_attribute_path_nodes.py  test_backfill_dry_run_agreement.py  test_backfill_source_choice.py  test_bibtex.py  test_canonical_head_guard.py  test_canonical_marker_strict.py  test_chain_typed_lookup.py  test_common_acknowledge.py  test_common_backfill.py  test_common_backfill_identity_fields.py  test_common_backfill_unhealable.py  test_common_check_log.py  test_compile_conflict_gate.py  test_conflict_predicate_parity.py  test_conflict_scalar.py  test_conflicts_value_hierarchy.py  test_control_char_gate.py  test_count_arg_guard.py  test_cross_source_arxiv_id.py  test_csl.py  test_dependency_path_reflexive.py  test_doi_prefix_fold.py  (+110 more)
tools/: README.md  ask_router.py  check_conflicts.py  common.py  compile_facts.py  corroboration.py  coverage.py  entity_audit.py  finalize.py  generate_logic_policy.py  merge_candidates.py  refresh_arxiv_categories.py  resolve_stale_refs.py  review_candidates.py  run_logic_check.py  source_coverage.py  spike_fallback_precision.py  validate.py  value_audit.py
(+5 files in other folders)
