[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "factlog"
version = "0.7.0"
description = "A Claude Code plugin that turns markdown sources into verifiable, source-backed facts: the LLM extracts, a Datalog/wirelog engine verifies."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [{ name = "Justin Kim" }]
keywords = ["claude-code", "skill", "datalog", "wirelog", "knowledge-base", "neurosymbolic", "fact-extraction"]
dependencies = ["pyrewire>=1.0.3,<2.0"]

[project.optional-dependencies]
test = ["pytest>=7"]
# Zotero integration (roadmap phase 1). Kept optional so the core install never
# pulls a Zotero client; `pip install factlog[zotero]` enables `zotero-import`.
zotero = ["pyzotero>=1.5"]
# OpenAlex integration (roadmap phase 2). httpx only: the API surface factlog
# needs is two GET endpoints, so `pyalex` (and its requests/urllib3 chain) is
# not worth the dependency — see #51.
openalex = ["httpx>=0.27"]
# arXiv integration (roadmap phase 3). The `arxiv` PyPI wrapper is deliberately
# not used: the API is one GET endpoint and hidden defaults cost more than they
# save — same reasoning as `pyalex` above. feedparser handles Atom, but note it
# reports a truncated body only via `bozo` rather than raising, so `client.py`
# treats `bozo` as a hard failure — see #57.
arxiv = ["httpx>=0.27", "feedparser>=6.0"]

[project.urls]
Homepage = "https://github.com/semantic-reasoning/factlog"

[project.scripts]
factlog = "factlog.cli:main"

[tool.setuptools]
packages = [
    "factlog",
    "factlog.integrations",
    "factlog.integrations.common",
    "factlog.integrations.zotero",
    "factlog.integrations.openalex",
    "factlog.integrations.arxiv",
]

[tool.pytest.ini_options]
# Python unit tests for the pure helpers live under tests/unit/; the legacy
# end-to-end suite is shell scripts (tests/*.sh) and is run separately.
testpaths = ["tests/unit"]

[tool.ruff]
target-version = "py311"
# Lint the package and the bundled engine scripts; skip generated/cache dirs.
extend-exclude = ["examples", "**/__pycache__"]
